apps/vaultwarden/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-stripprefix
  namespace: vaultwarden
spec:
  stripPrefix:
    prefixes:
      - /vaultwarden
