apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: vaultwarden-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: borgling-1.tail20def8.ts.net
    http:
      paths:
      - path: /vaultwarden
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
